=======
CHANGES
=======

0.4.0 (Unreleased)
==================

- JQuery 1.7.1


0.3.1 (2012-01-19)
==================

Features
--------

- Added ``voc_factory`` attribute to ``VocabularyField``


Bug fixes
---------

- Stop process if current revisions are 
  different from head revisions.

- Execute ``POPULATE_DB_SCHEMA`` populate step
  instead of all populate steps during migration.


0.3.0 (2012-01-12)
==================

Features
--------

- Added data migration subsystem. It is documented
  in the "Data migration" chapter.

- Added data population subsystem. It is documented
  in the "Data population" chapter.

- Added a ``ptah-migrate`` script. It is documented
  in the "Command-Line utilities" chapter.

- Added a ``ptah-populate`` script. It is documented
  in the "Command-Line utilities" chapter.

- Added a ``default_roles`` setting. It defines
  list of roles for principal.

- Its possible to start ptah without database.

- Added json dict column ``ptah_nodes.annotations``.

- Removed `ptah_content` table columns,
  `view`, `creators`, `subjects`, `publisher`, `contributors`.


Bug Fixes
---------

- MySQL Compatibility #116


0.2.1 (2011-12-28)
==================

Features
--------

- Added python2.6 support.

- Added a ``ptah-manage`` script. It is documented
  in the "Command-Line utilities" chapter.


- Fixed mail template generation on python3


0.2 (2011-12-21)
================

- require pyramid 1.3


0.1.1 (2011-12-05)
==================

- Fix rst renderer


0.1 (2011-11-19)
================

- Initial release